--- a/TODO.txt
+++ b/TODO.txt
@@ -6,7 +6,7 @@ Fbld 4 Spec:
   For example, presumably we can't do something like:
     struct Foo<struct Bar(Foo x)>(Bar y);
 * Clarify in spec what is allowed in terms of recursion through imports.
-  Example: import A { A; }; Then fix 2.2.3-03
+  Example: import A { A; };
 * Add support for specifying interfaces in different files?
 
 Fbld 4 Test:
