--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,14 @@
+Conditional Syntax Change
+* Change fblc spec to require tags for conditionals
+  - include rationale
+* Update all test cases to new syntax
+* Update fblc code to implement new syntax
+* Update all fblc programs to use new syntax
+* Update fbld code to implement new syntax
+* Update all programs to use new syntax
+* Add test cases to cover tag boundary conditions
+ - missing tag, tag out of order, invalid tag, etc.
+
 Fbld 4 Spec:
 * Clarify in spec that alias acts as another way to define the body of an
   entity, it doesn't effect the use of that entity.
