--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,9 @@
+Fble:
+* Figure out how to deal with processes.
+ - Finish converting snake.fble.
+* Draft a syntax reference.
+* Implement an fble interpreter.
+
 Fbld 4 Spec:
 * Clarify in spec that alias acts as another way to define the body of an
   entity, it doesn't effect the use of that entity.
