--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,11 @@
 Fble:
+* Set up evaluator to pass basic tests.
+* Finish implementing evaluator
+  - adding tests as we go.
+  - until we can run snake.fble.
 * Come up with syntax to distinguish between struct_value and rest of apply?
   - Because struct_value is the only one where we need to evaluate the value
     of the thing being applied in order to check its type.
-* Figure out testing strategy.
-* Start implementing evaluator
- - with option to check types or assume they have already been checked
- - with option to evaluate abstract (just type and whatever is needed for
-   type checking) or to evaluate fully.
 * Figure out how to allow an fble file to be reused for multiple different
   programs.
 
